# Dryad-Engine

./: .gitignore  Dropkick Core Engine.sln  Dryad.sln  GameLoop.cpp  GameLoop.h  GameObject.cpp  countlines.ps1  fix powershell.txt
Dropkick Core Engine/: Dropkick Core Engine.vcxproj  stdafx.cpp
Game/: AssetLibrary.cpp  AssetLibrary.h  Button.cpp  Button.h  Camera.cpp  Camera.h  Circle.h  CompositeSprite.cpp  CompositeSprite.h  Game.vcxproj  Game.vcxproj.filters  GameLoop.cpp  GameLoop.h  GameObject.cpp  GameObject.h  GameObjectEvent.h  Hitbox.cpp  Hitbox.h  HorizontalStackFrame.cpp  HorizontalStackFrame.h  Input.cpp  Input.h  Light.h  Line.cpp  Line.h  ModifiableProperty.cpp  ModifiableProperty.h  Mouse.cpp  Mouse.h  Physics.cpp  Physics.h  Point.cpp  Point.h  Polygon.h  Rectangle.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Size.h  (+22 more)
src/: CMakeLists.txt
src/dryad/: AssetLibrary.cpp  AssetLibrary.h  Button.cpp  Button.h  CMakeLists.txt  Camera.cpp  Camera.h  Circle.h  CompositeSprite.cpp  CompositeSprite.h  Game.vcxproj.filters  GameLoop.cpp  GameLoop.h  GameObject.cpp  GameObject.h  GameObjectEvent.h  Header.h  Hitbox.cpp  Hitbox.h  HorizontalStackFrame.cpp  HorizontalStackFrame.h  Input.cpp  Input.h  Light.h  Line.cpp  Line.h  ModifiableProperty.h  Mouse.cpp  Mouse.h  Physics.cpp  Physics.h  Point.cpp  Point.h  Polygon.h  Rectangle.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Size.h  (+21 more)
src/samples/: CMakeLists.txt  main.cpp
